deploy/k8s/deployment.yaml
# Generated by IBM Migration Artifacts Bundler
# Wed Nov 27 16:06:29 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworldjspwar
  name: helloworldjspwar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworldjspwar
  template:
    metadata:
      labels:
        app: helloworldjspwar
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: helloworldjspwar
          ports:
            - containerPort: 9080
              protocol: TCP
