deploy/k8s/service.yaml
# Generated by IBM Migration Artifacts Bundler
# Wed Nov 27 16:06:29 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworldjspwar
  name: helloworldjspwar
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: helloworldjspwar
