deploy/k8s/route.yaml
# Generated by IBM Migration Artifacts Bundler
# Wed Nov 27 16:06:29 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworldjspwar
  name: helloworldjspwar
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: helloworldjspwar
    weight: 100
